update book services to order services remove ability to remove fees from ui fix icons shifting sizes when selected

--- a/style/sass/_services.sass
+++ b/style/sass/_services.sass
@@ -53,7 +53,9 @@ $lr-margin-offset: 12px
     height: $size
     line-height: $size
     border-radius: $size/2
+    padding: 3px
 
   &.is-active
     img
       border: 3px solid $primary
+      padding: 0
